Добавлены тесты, перенесены в папку tests используя junit, добавлена очистка куки